--- a/gui/package.json
+++ b/gui/package.json
@@ -8,8 +8,10 @@
     "dist:style": "gulp --gulpfile build/build-style.js",
     "dist:dev": "webpack --config build/webpack.dist.dev.config.js",
     "dist:prod": "webpack --config build/webpack.dist.prod.config.js",
+    "happy": "webpack --config build/webpack.happy.config.js",
     "dist:locale": "webpack --config build/webpack.dist.locale.config.js",
-    "dist": "npm run dist:style && npm run dist:dev && npm run dist:prod && npm run dist:locale",
+    "build-dll": "webpack --config build/webpack.dll.config.js",
+    "dist": "npm run build-dll && npm run dist:style && npm run dist:dev && npm run dist:prod && npm run dist:locale",
     "lint": "eslint --fix --ext .js,.vue src",
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
     "test": "npm run lint && npm run unit",
@@ -31,6 +33,7 @@
     "babel-preset-stage-3": "^6.24.1",
     "babel-runtime": "^6.26.0",
     "chai": "^3.5.0",
+    "clean-webpack-plugin": "^0.1.16",
     "cross-env": "^3.2.4",
     "css-loader": "^0.23.1",
     "eslint": "^3.19.0",
@@ -43,6 +46,7 @@
     "gulp-clean-css": "^2.0.13",
     "gulp-less": "^3.3.2",
     "gulp-rename": "^1.2.2",
+    "happypack": "^4.0.0",
     "html-loader": "^0.3.0",
     "html-webpack-plugin": "^2.29.0",
     "less": "^2.7.1",
